...
    <!-- SignUpScreen -->
    <string name="create_account">Create account</string>
    <string name="password_error">Your password should have at least six digits and include one digit, one lower case letter and one upper case letter.</string>
    <string name="password_match_error">Passwords do not match.</string>

    <!-- TrainingsScreens -->
    <string name="trainings">Trainings</string>
    <string name="next_scheduled_training">Next scheduled training</string>
    <string name="last_training">Last training</string>
    <string name="no_planned_trainings">no planned trainings yet…</string>
    <string name="no_trainings_in_history">no trainings in history…</string>

    <!-- AgendaScreen -->
    <string name="agenda">Agenda</string>

    <!-- ProfileScreen -->
    <string name="profile">Profile</string>
...

    <string name="edit">Edit</string>
    <string name="add_training">Add training</string>
    <string name="confirm">Confirm</string>
    <string name="close">Close</string>
    <string name="edit_repetitions">Edit repetitions</string>
    <string name="more_options">More options</string>
    <string name="delete_repetition">Delete repetition</string>
    <string name="add_repetition">Add repetition</string>
    <string name="edit_repetition">Edit repetition</string>
    <string name="duration_type">Duration type</string>
    <string name="save">Save</string>
    <string name="recover_type">Recover type</string>
...
    <string name="cool_down">Cool down</string>
    <string name="warm_up">Warm up</string>
    <string name="repetitions">Repetitions</string>
    <string name="recover">Recover</string>
    <string name="move_step">Move step</string>
    <string name="delete_repetition_confirmation">Are you sure you want to delete this element?</string>
    <string name="delete">Delete</string>
    <string name="repetition">Repetition</string>
    <string name="favorite">Favorite</string>
    <string name="run">Run</string>
    <string name="delete_training">Delete training</string>
    <string name="delete_training_confirmation">Are you sure you want to delete this training?</string>
    <string name="fill_training">Fill training</string>
    <string name="extra_recover">Extra recover</string>
    <string name="back">Back</string>
    <string name="forward">Forward</string>
    <string name="fill_result">Fill result</string>
...
